PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 20??, PHP 5.3.2
- Upgraded bundled sqlite to version 3.6.20. (Ilia)
- Upgraded bundled PCRE to version 8.00. (Scott)

- Changed gmp_strval() to use full range from 2 to 62, and -2 to -36. FR #50283
  (David Soria Parra)
- Changed "post_max_size" php.ini directive to allow unlimited post size by
  setting it to 0. (Rasmus)

- Added ReflectionMethod::setAccessible() for invoking non-public methods
  through the Reflection API. (Sebastian)
- Added Collator::getSortKey for intl extension. (Stas)
- Added support for CURLOPT_POSTREDIR. FR #49571. (Sriram Natarajan)
- Added support for CURLOPT_CERTINFO. FR #49253.
  (Linus Nielsen Feltzing <linus@haxx.se>)
- Added client-side server name indication support in openssl. (Arnaud)

- Fixed error_log() to be binary safe when using message_type 3. (Jani)
- Fixed unnecessary invocation of setitimer when timeouts have been disabled.
  (Arvind Srinivasan)
- Fixed memory leak in extension loading when an error occurs on Windows.
  (Pierre)

- Fixed bug #50340 (php.ini parser does not allow spaces in ini keys). (Jani)
- Fixed bug #50285 (xmlrpc does not preserve keys in encoded indexed arrays).
  (Felipe)
- Fixed bug #50282 (xmlrpc_encode_request() changes object into array in 
  calling function). (Felipe)
- Fixed bug #50267 (get_browser(null) does not use HTTP_USER_AGENT). (Jani)
- Fixed bug #50266 (conflicting types for llabs). (Jani)
- Fixed bug #50261 (Crash When Calling Parent Constructor with
  call_user_func()). (Dmitry)
- Fixed bug #50255 (isset() and empty() silently casts array to object).
  (Felipe)
- Fixed bug #50240 (pdo_mysql.default_socket in php.ini shouldn't used
  if it is empty). (foutrelis at gmail dot com, Ilia)
- Fixed bug #50231 (Socket path passed using --with-mysql-sock is ignored when
  mysqlnd is enabled). (Jani)